# AGY-QQ-Bridge

./: .env.example  .gitignore  LICENSE  README.md  agy-conversation-monitor.py  agy-qq-bridge.py  pyproject.toml
src/agy_qq_bridge/: __init__.py  __main__.py  bridge.py
