[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agy-qq-bridge"
version = "2.0.0"
description = "Google AGY QQ Bridge - Connect AGY CLI to QQ instant messaging"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agy_qq_bridge*"]

[project.scripts]
agy-qq-bridge = "agy_qq_bridge.bridge:cli"
